[♻️ REFACTOR] 페이지네이션 리팩토링, 테스트 코드 수정